boulder/boulder/tests/compile_fail/intrinsics/to_bytes/ret_ty.bo
# found `u8`
# `u16Bytes`
# `u32Bytes`
# (7:

fn test() -> u8 {
    to_bytes(7: u32)
}